--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
-name: example-environment
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - numpy
-  - psutil
-  - toolz
-  - dill
-  - pandas
-  - postgresql
+  - ipykernel
+  - python>=3.10
+  - psycopg2
+  - ipython-sql
+  - pgspecial
+  - pandas>=1.3
+  - matplotlib
